--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>个人简历 — 科技商务风（带导航与加载）</title>
+  <title>个人简历 — 科技商务风</title>
   <style>
     :root {
       --bg1: #0a192f;
@@ -24,31 +24,15 @@
       margin:0; padding:0; min-height:100vh; display:flex; align-items:center; justify-content:center;
       background: linear-gradient(135deg,var(--bg1),var(--bg2)); color:var(--text);
       -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
+      user-select: none;
     }
 
-    /* --- top transparent navigation (A: 透明玻璃风) --- */
-    .topnav{
-      position:fixed; left:50%; transform:translateX(-50%); top:18px; z-index:60;
-      width:calc(100% - 80px); max-width:1100px; display:flex; justify-content:space-between; align-items:center;
-      padding:10px 18px; border-radius:12px; background: rgba(255,255,255,0.03); border:1px solid rgba(255,255,255,0.04);
-      backdrop-filter: blur(6px);
-      box-shadow: 0 6px 20px rgba(2,6,23,0.6);
-    }
-    .nav-left{display:flex;align-items:center;gap:12px}
-    .brand{font-weight:700;color:var(--accent2);letter-spacing:0.4px}
-    .nav-links{display:flex;gap:12px}
-    .nav-links a{color:var(--muted);text-decoration:none;font-size:14px;padding:6px 8px;border-radius:8px}
-    .nav-links a:hover{color:var(--text);background:rgba(255,255,255,0.02)}
-    .nav-actions{display:flex;gap:10px;align-items:center}
-    .nav-btn{background:linear-gradient(90deg,var(--accent),var(--accent2)); color:#fff; padding:8px 12px;border-radius:8px;border:none;cursor:pointer;font-weight:600}
-
-    /* --- loading overlay (B: 流动光带) --- */
+    /* --- loading overlay (flowing light band) --- */
     .loading-wrap{position:fixed; inset:0; display:flex;align-items:center;justify-content:center; z-index:200; background:linear-gradient(180deg, rgba(10,25,47,0.9), rgba(10,25,47,0.7)); transition:opacity .5s ease, visibility .5s ease}
     .loading{width:260px; height:8px; border-radius:999px; background:rgba(255,255,255,0.06); overflow:hidden; position:relative}
     .flow{position:absolute; left:-40%; top:0; height:100%; width:40%; background:linear-gradient(90deg, transparent, rgba(0,198,174,0.9), transparent); transform:skewX(-20deg); animation:flow 1.4s linear infinite}
     @keyframes flow{ from{left:-50%} to{left:130%} }
     .loading-text{color:var(--muted); font-size:13px; margin-top:12px}
-
     .hidden{opacity:0; visibility:hidden}
 
     /* --- resume card --- */
@@ -69,13 +53,6 @@
     ul{margin:6px 0 0 20px} li{margin-bottom:6px}
 
     .download{display:block;margin:22px auto 0;background:linear-gradient(90deg,var(--accent),var(--accent2));color:#fff;border:none;padding:10px 14px;border-radius:8px;cursor:pointer;font-weight:700}
-
-    /* small interactive touches */
-    [contenteditable]{outline:2px dashed transparent;padding:2px}
-    [contenteditable]:focus{outline-color:rgba(0,198,174,0.14);border-radius:6px}
-
-    /* responsive tweaks for nav on small screens */
-    @media (max-width:600px){.topnav{width:calc(100% - 28px);padding:8px} .nav-links{display:none}}
   </style>
 </head>
 <body>
@@ -90,33 +67,17 @@
     </div>
   </div>
 
-  <!-- Top transparent navigation (glass) -->
-  <nav class="topnav" aria-label="主导航">
-    <div class="nav-left">
-      <div class="brand">TechResume</div>
-      <div class="nav-links">
-        <a href="#about">关于</a>
-        <a href="#work">经历</a>
-        <a href="#projects">项目</a>
-        <a href="#contact">联系</a>
-      </div>
-    </div>
-    <div class="nav-actions">
-      <button class="nav-btn" onclick="document.getElementById('downloadBtn').click()">下载 PDF</button>
-    </div>
-  </nav>
-
   <!-- Resume Content -->
   <main class="resume" role="main">
     <aside class="left">
       <div class="avatar">头像</div>
-      <h1 contenteditable="true">姓名</h1>
-      <div class="title" contenteditable="true">Java 全栈工程师 · 企业级系统</div>
+      <h1>姓名</h1>
+      <div class="title">Java 全栈工程师 · 企业级系统</div>
 
-      <div class="section contact" id="contact">
-        <div contenteditable="true">📱 手机：186-xxxx-xxxx</div>
-        <div contenteditable="true">✉️ 邮箱：you@example.com</div>
-        <div contenteditable="true">🌐 GitHub：github.com/yourname</div>
+      <div class="section contact">
+        <div>📱 手机：186-xxxx-xxxx</div>
+        <div>✉️ 邮箱：you@example.com</div>
+        <div>🌐 GitHub：github.com/yourname</div>
       </div>
 
       <div class="section skills">
@@ -130,7 +91,7 @@
         <div class="skill">Docker</div>
       </div>
 
-      <div class="section education" contenteditable="true">
+      <div class="section education">
         <h3>教育背景</h3>
         <div>山东大学 · 软件工程 · 2016.09 – 2020.07</div>
       </div>
@@ -139,51 +100,44 @@
     </aside>
 
     <section class="right">
-      <h2 id="about">职业概况</h2>
-      <div contenteditable="true">具备企业级后端与前端实践经验，熟悉微服务架构、流程引擎集成与安全通信设计，注重系统可靠性与工程化交付。</div>
+      <h2>职业概况</h2>
+      <div>具备企业级后端与前端实践经验，熟悉微服务架构、流程引擎集成与安全通信设计，注重系统可靠性与工程化交付。</div>
 
-      <h2 id="work">工作经历</h2>
+      <h2>工作经历</h2>
       <div class="job">
-        <h3 contenteditable="true">山东大成科技 · Java开发工程师</h3>
-        <div class="when" contenteditable="true">2021.03 – 至今</div>
+        <h3>山东大成科技 · Java开发工程师</h3>
+        <div class="when">2021.03 – 至今</div>
         <ul>
-          <li contenteditable="true">负责后端核心模块与微服务拆分，设计模块边界与接口契约。</li>
-          <li contenteditable="true">主导流程引擎集成与跨系统加密通信（RSA）方案。</li>
-          <li contenteditable="true">推动 CI/CD 改进，提升部署效率与系统可用性。</li>
+          <li>负责后端核心模块与微服务拆分，设计模块边界与接口契约。</li>
+          <li>主导流程引擎集成与跨系统加密通信（RSA）方案。</li>
+          <li>推动 CI/CD 改进，提升部署效率与系统可用性。</li>
         </ul>
       </div>
 
-      <h2 id="projects">项目经验</h2>
+      <h2>项目经验</h2>
       <div class="project">
-        <strong contenteditable="true">企业智能审批系统</strong>
-        <div class="when" contenteditable="true">2023</div>
-        <div contenteditable="true">负责流程编排、任务调度与安全通信设计，设计了密钥管理与鉴权流程，保证跨应用数据传输安全。</div>
+        <strong>企业智能审批系统</strong>
+        <div class="when">2023</div>
+        <div>负责流程编排、任务调度与安全通信设计，保证跨应用数据传输安全。</div>
+        <div>🔗 项目地址：<a href="#" style="color:var(--accent2); text-decoration:underline">https://example.com/project1</a></div>
       </div>
 
       <div class="project">
-        <strong contenteditable="true">日志监控与告警平台</strong>
-        <div class="when" contenteditable="true">2022</div>
-        <div contenteditable="true">搭建日志采集管道，实现实时告警与可视化报表，提升故障响应速度。</div>
+        <strong>日志监控与告警平台</strong>
+        <div class="when">2022</div>
+        <div>搭建日志采集管道，实现实时告警与可视化报表，提升故障响应速度。</div>
+        <div>🔗 项目地址：<a href="#" style="color:var(--accent2); text-decoration:underline">https://example.com/project2</a></div>
       </div>
 
       <h2>自我评价</h2>
-      <div contenteditable="true">逻辑清晰，注重代码质量与架构稳定性；善于沟通协作，能将复杂需求拆解为可执行的工程任务。</div>
+      <div>逻辑清晰，注重代码质量与架构稳定性；善于沟通协作，能将复杂需求拆解为可执行的工程任务。</div>
     </section>
   </main>
 
   <script>
-    // 简单控制加载动画 —— 页面加载完成后自动隐藏
     window.addEventListener('load', function(){
       const wrap = document.getElementById('loadingWrap');
       if(wrap){ wrap.classList.add('hidden'); setTimeout(()=>wrap.style.display='none',600); }
-    });
-
-    // 平滑锚点滚动（小交互）
-    document.querySelectorAll('.topnav a').forEach(a=>{
-      a.addEventListener('click', e=>{
-        e.preventDefault(); const id = a.getAttribute('href').slice(1); const el = document.getElementById(id);
-        if(el) el.scrollIntoView({behavior:'smooth', block:'start'});
-      });
     });
   </script>
 </body>
