--- a/index.html
+++ b/index.html
@@ -1,108 +1,105 @@
 <!doctype html>
 <html lang="zh-CN">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>个人简历 — 科技商务风</title>
-  <style>
-    :root {
-      --bg1: #0a192f;
-      --bg2: #1a2a3c;
-      --card: rgba(255, 255, 255, 0.06);
-      --text: #e6eef7;
-      --muted: #94a3b8;
-      --accent: #0078D7;
-      --accent2: #00C6AE;
-      --glass: rgba(255,255,255,0.04);
-      --radius: 14px;
-      font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
-    }
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>个人简历 — 科技商务风</title>
+<style>
+:root {
+  --bg1: #0a192f;
+  --bg2: #1a2a3c;
+  --card: rgba(255, 255, 255, 0.06);
+  --text: #e6eef7;
+  --muted: #94a3b8;
+  --accent: #0078D7;
+  --accent2: #00C6AE;
+  --radius: 14px;
+  font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+}
 
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0; padding:0; min-height:100vh; display:flex; align-items:center; justify-content:center;
-      background: linear-gradient(135deg,var(--bg1),var(--bg2)); color:var(--text);
-      -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
-      user-select: none;
-    }
+*{box-sizing:border-box}
+html,body{height:100%}
+body{
+  margin:0; padding:0; min-height:100vh; display:flex; align-items:center; justify-content:center;
+  background: linear-gradient(135deg,var(--bg1),var(--bg2)); color:var(--text);
+  -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
+  user-select: none;
+}
 
-    /* --- loading overlay (flowing light band) --- */
-    .loading-wrap{position:fixed; inset:0; display:flex;align-items:center;justify-content:center; z-index:200; background:linear-gradient(180deg, rgba(10,25,47,0.9), rgba(10,25,47,0.7)); transition:opacity .5s ease, visibility .5s ease}
-    .loading{width:260px; height:8px; border-radius:999px; background:rgba(255,255,255,0.06); overflow:hidden; position:relative}
-    .flow{position:absolute; left:-40%; top:0; height:100%; width:40%; background:linear-gradient(90deg, transparent, rgba(0,198,174,0.9), transparent); transform:skewX(-20deg); animation:flow 1.4s linear infinite}
-    @keyframes flow{ from{left:-50%} to{left:130%} }
-    .loading-text{color:var(--muted); font-size:13px; margin-top:12px}
-    .hidden{opacity:0; visibility:hidden}
+.loading-wrap{position:fixed; inset:0; display:flex;align-items:center;justify-content:center; z-index:200; background:linear-gradient(180deg, rgba(10,25,47,0.9), rgba(10,25,47,0.7)); transition:opacity .5s ease, visibility .5s ease}
+.loading{width:260px; height:8px; border-radius:999px; background:rgba(255,255,255,0.06); overflow:hidden; position:relative}
+.flow{position:absolute; left:-40%; top:0; height:100%; width:40%; background:linear-gradient(90deg, transparent, rgba(0,198,174,0.9), transparent); transform:skewX(-20deg); animation:flow 1.4s linear infinite}
+@keyframes flow{ from{left:-50%} to{left:130%} }
+.loading-text{color:var(--muted); font-size:13px; margin-top:12px}
+.hidden{opacity:0; visibility:hidden}
 
-    /* --- resume card --- */
-    .resume{width:100%; max-width:960px; border-radius:var(--radius); background:var(--card); backdrop-filter: blur(18px); box-shadow:0 10px 40px rgba(0,0,0,0.6); display:grid; grid-template-columns:300px 1fr; overflow:hidden; border:1px solid rgba(255,255,255,0.05); margin:40px 20px}
-    @media (max-width:860px){.resume{grid-template-columns:1fr}}
-    .left{padding:36px 28px; background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01)); border-right:1px solid rgba(255,255,255,0.04)}
-    .avatar{width:110px;height:110px;border-radius:50%;border:2px solid var(--accent); display:flex;align-items:center;justify-content:center;margin:0 auto 18px;background:rgba(255,255,255,0.03);color:var(--accent2);font-weight:700}
-    h1{text-align:center;margin:6px 0;font-size:22px;color:var(--accent2)}
-    .title{text-align:center;font-size:14px;color:var(--muted);margin-bottom:18px}
-    .section{margin-top:18px}
-    .contact div, .education div{margin:6px 0;font-size:14px}
-    .skills .skill{display:inline-block;background:rgba(255,255,255,0.03);border-radius:6px;padding:6px 10px;margin:4px;font-size:13px;color:var(--accent2)}
-    .right{padding:36px 32px}
-    h2{color:var(--accent); border-bottom:2px solid rgba(0,0,0,0); display:inline-block;margin-bottom:12px;font-size:18px}
-    .job,.project{margin-bottom:18px}
-    .job h3,.project strong{margin:0;color:#fff;font-size:15px}
-    .when{font-size:13px;color:var(--muted)}
-    ul{margin:6px 0 0 20px} li{margin-bottom:6px}
-
-    .download{display:block;margin:22px auto 0;background:linear-gradient(90deg,var(--accent),var(--accent2));color:#fff;border:none;padding:10px 14px;border-radius:8px;cursor:pointer;font-weight:700}
-  </style>
+.resume{width:100%; max-width:960px; border-radius:var(--radius); background:var(--card); backdrop-filter: blur(18px); box-shadow:0 10px 40px rgba(0,0,0,0.6); display:grid; grid-template-columns:300px 1fr; overflow:hidden; border:1px solid rgba(255,255,255,0.05); margin:40px 20px; gap:0}
+@media (max-width:860px){.resume{grid-template-columns:1fr}}
+.left{padding:36px 28px; background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01)); border-right:1px solid rgba(255,255,255,0.04)}
+.avatar{width:110px;height:110px;border-radius:50%;border:2px solid var(--accent); display:flex;align-items:center;justify-content:center;margin:0 auto 18px;background:rgba(255,255,255,0.03);color:var(--accent2);font-weight:700}
+h1{text-align:center;margin:6px 0;font-size:22px;color:var(--accent2)}
+.title{text-align:center;font-size:14px;color:var(--muted);margin-bottom:24px}
+.section{margin-top:24px}
+.contact div, .education div{margin:6px 0;font-size:14px; line-height:1.6}
+.skills .skill{display:inline-block;background:rgba(255,255,255,0.03);border-radius:6px;padding:6px 10px;margin:4px 4px 4px 0;font-size:13px;color:var(--accent2)}
+.right{padding:36px 32px; display:flex; flex-direction:column; gap:28px}
+h2{color:var(--accent); border-bottom:2px solid rgba(0,0,0,0); display:inline-block;margin-bottom:16px;font-size:18px}
+.job,.project,.portfolio{display:flex; flex-direction:column; gap:6px}
+.job h3,.project strong,.portfolio strong{margin:0;color:#fff;font-size:15px}
+.when{font-size:13px;color:var(--muted)}
+ul{margin:6px 0 0 20px; padding:0} li{margin-bottom:4px; line-height:1.5}
+a{color:var(--accent2); text-decoration:underline}
+.download{display:block;margin:22px auto 0;background:linear-gradient(90deg,var(--accent),var(--accent2));color:#fff;border:none;padding:10px 14px;border-radius:8px;cursor:pointer;font-weight:700}
+</style>
 </head>
 <body>
-
-  <!-- Loading overlay (flowing light band) -->
-  <div id="loadingWrap" class="loading-wrap">
-    <div style="text-align:center">
-      <div class="loading" role="progressbar" aria-label="加载中">
-        <div class="flow"></div>
-      </div>
-      <div class="loading-text">正在加载简历…</div>
+<div id="loadingWrap" class="loading-wrap">
+  <div style="text-align:center">
+    <div class="loading" role="progressbar" aria-label="加载中">
+      <div class="flow"></div>
     </div>
+    <div class="loading-text">正在加载简历…</div>
   </div>
+</div>
 
-  <!-- Resume Content -->
-  <main class="resume" role="main">
-    <aside class="left">
-      <div class="avatar">头像</div>
-      <h1>姓名</h1>
-      <div class="title">Java 全栈工程师 · 企业级系统</div>
+<main class="resume" role="main">
+  <aside class="left">
+    <div class="avatar">头像</div>
+    <h1>姓名</h1>
+    <div class="title">Java 全栈工程师 · 企业级系统</div>
 
-      <div class="section contact">
-        <div>📱 手机：186-xxxx-xxxx</div>
-        <div>✉️ 邮箱：you@example.com</div>
-        <div>🌐 GitHub：github.com/yourname</div>
-      </div>
+    <div class="section contact">
+      <div>📱 手机：186-xxxx-xxxx</div>
+      <div>✉️ 邮箱：you@example.com</div>
+      <div>🌐 GitHub：github.com/yourname</div>
+    </div>
 
-      <div class="section skills">
-        <h3>技能专长</h3>
-        <div class="skill">Java</div>
-        <div class="skill">Spring Boot</div>
-        <div class="skill">微服务</div>
-        <div class="skill">MySQL</div>
-        <div class="skill">Redis</div>
-        <div class="skill">Vue</div>
-        <div class="skill">Docker</div>
-      </div>
+    <div class="section skills">
+      <h3>技能专长</h3>
+      <div class="skill">Java</div>
+      <div class="skill">Spring Boot</div>
+      <div class="skill">微服务</div>
+      <div class="skill">MySQL</div>
+      <div class="skill">Redis</div>
+      <div class="skill">Vue</div>
+      <div class="skill">Docker</div>
+    </div>
 
-      <div class="section education">
-        <h3>教育背景</h3>
-        <div>山东大学 · 软件工程 · 2016.09 – 2020.07</div>
-      </div>
+    <div class="section education">
+      <h3>教育背景</h3>
+      <div>山东大学 · 软件工程 · 2016.09 – 2020.07</div>
+    </div>
 
-      <button id="downloadBtn" class="download" onclick="window.print()">导出为 PDF</button>
-    </aside>
+    <button id="downloadBtn" class="download" onclick="window.print()">导出为 PDF</button>
+  </aside>
 
-    <section class="right">
+  <section class="right">
+    <div class="section">
       <h2>职业概况</h2>
-      <div>具备企业级后端与前端实践经验，熟悉微服务架构、流程引擎集成与安全通信设计，注重系统可靠性与工程化交付。</div>
+      <p>具备企业级后端与前端实践经验，熟悉微服务架构、流程引擎集成与安全通信设计，注重系统可靠性与工程化交付。</p>
+    </div>
 
+    <div class="section">
       <h2>工作经历</h2>
       <div class="job">
         <h3>山东大成科技 · Java开发工程师</h3>
@@ -113,32 +110,26 @@
           <li>推动 CI/CD 改进，提升部署效率与系统可用性。</li>
         </ul>
       </div>
+    </div>
 
+    <div class="section">
       <h2>项目经验</h2>
       <div class="project">
         <strong>企业智能审批系统</strong>
         <div class="when">2023</div>
-        <div>负责流程编排、任务调度与安全通信设计，保证跨应用数据传输安全。</div>
-        <div>🔗 项目地址：<a href="#" style="color:var(--accent2); text-decoration:underline">https://example.com/project1</a></div>
+        <p>负责流程编排、任务调度与安全通信设计，保证跨应用数据传输安全。</p>
       </div>
 
       <div class="project">
         <strong>日志监控与告警平台</strong>
         <div class="when">2022</div>
-        <div>搭建日志采集管道，实现实时告警与可视化报表，提升故障响应速度。</div>
-        <div>🔗 项目地址：<a href="#" style="color:var(--accent2); text-decoration:underline">https://example.com/project2</a></div>
+        <p>搭建日志采集管道，实现实时告警与可视化报表，提升故障响应速度。</p>
       </div>
+    </div>
 
-      <h2>自我评价</h2>
-      <div>逻辑清晰，注重代码质量与架构稳定性；善于沟通协作，能将复杂需求拆解为可执行的工程任务。</div>
-    </section>
-  </main>
-
-  <script>
-    window.addEventListener('load', function(){
-      const wrap = document.getElementById('loadingWrap');
-      if(wrap){ wrap.classList.add('hidden'); setTimeout(()=>wrap.style.display='none',600); }
-    });
-  </script>
-</body>
-</html>
+    <div class="section">
+      <h2>作品展示</h2>
+      <div class="portfolio">
+        <strong>智能审批系统演示</strong>
+        <div class="when">2023</div>
+        <p>🔗 地址：<a href="#">https
