--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
   font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
 }
 *{box-sizing:border-box}
-html,body{height:100%}
+html,body{height:100%; margin:0; padding:0; user-select:none;}
 body{
-  margin:0; padding:0; min-height:100vh; display:flex; align-items:center; justify-content:center;
+  display:flex; justify-content:center; align-items:flex-start;
   background: linear-gradient(135deg,var(--bg1),var(--bg2)); color:var(--text);
   -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
-  user-select: none;
 }
 .loading-wrap{position:fixed; inset:0; display:flex;align-items:center;justify-content:center; z-index:200; background:linear-gradient(180deg, rgba(10,25,47,0.9), rgba(10,25,47,0.7)); transition:opacity .5s ease, visibility .5s ease}
 .loading{width:260px; height:8px; border-radius:999px; background:rgba(255,255,255,0.06); overflow:hidden; position:relative}
@@ -30,16 +29,31 @@ body{
 @keyframes flow{ from{left:-50%} to{left:130%} }
 .loading-text{color:var(--muted); font-size:13px; margin-top:12px}
 .hidden{opacity:0; visibility:hidden}
-.resume{width:100%; max-width:960px; border-radius:var(--radius); background:var(--card); backdrop-filter: blur(18px); box-shadow:0 10px 40px rgba(0,0,0,0.6); display:grid; grid-template-columns:300px 1fr; overflow:hidden; border:1px solid rgba(255,255,255,0.05); margin:40px 20px; gap:0}
-@media (max-width:860px){.resume{grid-template-columns:1fr}}
-.left{padding:36px 28px; background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01)); border-right:1px solid rgba(255,255,255,0.04)}
+
+.resume{
+  width:100%; max-width:960px; border-radius:var(--radius); background:var(--card);
+  backdrop-filter: blur(18px); box-shadow:0 10px 40px rgba(0,0,0,0.6);
+  display:grid; grid-template-columns:300px 1fr; overflow:hidden; border:1px solid rgba(255,255,255,0.05); margin:40px 20px; gap:0;
+  height:90vh;
+}
+@media (max-width:860px){.resume{grid-template-columns:1fr; height:auto}}
+.left{
+  padding:36px 28px; background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+  border-right:1px solid rgba(255,255,255,0.04);
+  position:sticky; top:0; align-self:start; height:100%; overflow:hidden;
+}
 .avatar{width:110px;height:110px;border-radius:50%;border:2px solid var(--accent); display:flex;align-items:center;justify-content:center;margin:0 auto 18px;background:rgba(255,255,255,0.03);color:var(--accent2);font-weight:700}
 h1{text-align:center;margin:6px 0;font-size:22px;color:var(--accent2)}
 .title{text-align:center;font-size:14px;color:var(--muted);margin-bottom:24px}
 .section{margin-top:24px}
 .contact div, .education div{margin:6px 0;font-size:14px; line-height:1.6}
 .skills .skill{display:inline-block;background:rgba(255,255,255,0.03);border-radius:6px;padding:6px 10px;margin:4px 4px 4px 0;font-size:13px;color:var(--accent2)}
-.right{padding:36px 32px; display:flex; flex-direction:column; gap:28px}
+.right{
+  padding:36px 32px; display:flex; flex-direction:column; gap:28px; overflow-y:auto; position:relative;
+}
+.right::-webkit-scrollbar{width:8px}
+.right::-webkit-scrollbar-thumb{background:rgba(0,198,174,0.6); border-radius:4px}
+.right::-webkit-scrollbar-track{background:rgba(255,255,255,0.02); border-radius:4px}
 h2{color:var(--accent); border-bottom:2px solid rgba(0,0,0,0); display:inline-block;margin-bottom:16px;font-size:18px}
 .job,.project,.portfolio{display:flex; flex-direction:column; gap:6px}
 .job h3,.project strong,.portfolio strong{margin:0;color:#fff;font-size:15px}
@@ -144,7 +158,7 @@ a{color:var(--accent2); text-decoration:underline}
 window.addEventListener('load', function(){
   const wrap = document.getElementById('loadingWrap');
   if(wrap){
-    const randomTime = Math.random() * 4000 + 1000; // 1-5秒随机时间
+    const randomTime = Math.random() * 4000 + 1000;
     setTimeout(()=>{ wrap.classList.add('hidden'); setTimeout(()=>wrap.style.display='none',600); }, randomTime);
   }
 });
