--- a/index.html
+++ b/index.html
@@ -103,15 +103,8 @@ table th{background:rgba(0,198,174,0.3)}
 
   <section class="right">
     <div class="section">
-      <h2>教育背景</h2>
-      <div>山东大学 · 软件工程 · 2016.09 – 2020.07</div>
-      <div>北京理工大学 · 信息管理与信息系统 · 2020.09 – 2022.07</div>
-    </div>
-
-    <div class="section">
-      <h2>证书</h2>
-      <div>Oracle Java SE 11 Programmer</div>
-      <div>PMP 项目管理专业认证</div>
+      <h2>职业概况</h2>
+      <p>具备企业级后端与前端实践经验，熟悉微服务架构、流程引擎集成与安全通信设计，注重系统可靠性与工程化交付。</p>
     </div>
 
     <div class="section">
@@ -142,6 +135,18 @@ table th{background:rgba(0,198,174,0.3)}
     </div>
 
     <div class="section">
+      <h2>教育背景</h2>
+      <div>山东大学 · 软件工程 · 2016.09 – 2020.07</div>
+      <div>北京理工大学 · 信息管理与信息系统 · 2020.09 – 2022.07</div>
+    </div>
+
+    <div class="section">
+      <h2>证书</h2>
+      <div>Oracle Java SE 11 Programmer</div>
+      <div>PMP 项目管理专业认证</div>
+    </div>
+
+    <div class="section">
       <h2>自我评价</h2>
       <p>逻辑清晰，注重代码质量与架构稳定性；善于沟通协作，能将复杂需求拆解为可执行的工程任务。</p>
     </div>
@@ -156,31 +161,3 @@ table th{background:rgba(0,198,174,0.3)}
             <th>地址</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>智能审批系统演示</td>
-            <td>2023</td>
-            <td><a href="#">https://example.com/project1</a></td>
-          </tr>
-          <tr>
-            <td>日志监控平台演示</td>
-            <td>2022</td>
-            <td><a href="#">https://example.com/project2</a></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </section>
-</main>
-
-<script>
-window.addEventListener('load', function(){
-  const wrap = document.getElementById('loadingWrap');
-  if(wrap){
-    const randomTime = Math.random() * 4000 + 1000;
-    setTimeout(()=>{ wrap.classList.add('hidden'); setTimeout(()=>wrap.style.display='none',600); }, randomTime);
-  }
-});
-</script>
-</body>
-</html>
