--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@ table th{background:rgba(0,198,174,0.3)}
         </ul>
       </div>
     </div>
-
     <div class="section">
       <h2>项目经历</h2>
       <div class="project">
@@ -150,7 +149,6 @@ table th{background:rgba(0,198,174,0.3)}
       <h2>自我评价</h2>
       <p>逻辑清晰，注重代码质量与架构稳定性；善于沟通协作，能将复杂需求拆解为可执行的工程任务。</p>
     </div>
-
     <div class="section">
       <h2>作品展示</h2>
       <table>
@@ -161,3 +159,38 @@ table th{background:rgba(0,198,174,0.3)}
             <th>地址</th>
           </tr>
         </thead>
+        <tbody>
+          <tr>
+            <td>智能审批系统 Demo</td>
+            <td>2023</td>
+            <td><a href="https://github.com/yourname/approval-system" target="_blank">访问链接</a></td>
+          </tr>
+          <tr>
+            <td>日志监控平台</td>
+            <td>2022</td>
+            <td><a href="https://github.com/yourname/log-monitor" target="_blank">访问链接</a></td>
+          </tr>
+          <tr>
+            <td>个人博客系统</td>
+            <td>2021</td>
+            <td><a href="https://github.com/yourname/blog-system" target="_blank">访问链接</a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
+</main>
+
+<script>
+// 随机 1-5 秒隐藏加载动画
+window.addEventListener('load', () => {
+  const wrap = document.getElementById('loadingWrap');
+  const t = Math.random()*4000 + 1000; // 1000~5000ms
+  setTimeout(() => {
+    wrap.classList.add('hidden');
+  }, t);
+});
+</script>
+
+</body>
+</html>
