--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ table th{background:rgba(0,198,174,0.3)}
     <div class="section contact">
       <div>📱 手机：186-xxxx-xxxx</div>
       <div>✉️ 邮箱：you@example.com</div>
-      <div>🌐 GitHub：github.com/yourname</div>
+      <div style="display: none">🌐 GitHub：github.com/xxx</div>
     </div>
 
     <div class="section skills">
@@ -98,7 +98,7 @@ table th{background:rgba(0,198,174,0.3)}
       <div class="skill">Docker</div>
     </div>
 
-    <button id="downloadBtn" class="download" onclick="window.print()">导出为 PDF</button>
+    <button style="display: none" id="downloadBtn" class="download" onclick="window.print()">导出为 PDF</button>
   </aside>
 
   <section class="right">
